Fix spacing and size of signup button in hero section in css file.
Adjust style and sizing of signup button by adjusting margin and padding.
Added font size and weight to button.

--- a/style.css
+++ b/style.css
@@ -24,7 +24,10 @@ button {
   background-color: #3882f6;
   border: 1px solid #3882f6;
   border-radius: 8px;
-  padding: 8px 20px;
+  padding: 10px 30px;
+  margin: 16px 0px;
+  font-weight: 500;
+  font-size: 18px;
 }
 
 img {
